fix grid spacing

--- a/src/_sass/_skills.scss
+++ b/src/_sass/_skills.scss
@@ -6,12 +6,17 @@
     // justify-content: space-between;
     
     display: grid;
-    row-gap: 16px;
+    row-gap: 24px;
     column-gap: 24px;
     grid-template-columns: repeat(4, 1fr);
 
     @media screen and (max-width: #{$small-desktop-width + 100px}) {
       grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include mobile {
+      column-gap: 16px;
+      grid-template-columns: repeat(1, 1fr);
     }
 
     &__category {
